| Bug #25636 | Node restart after 3 LCP's can cause incorrect UNDO to be run | ||
|---|---|---|---|
| Submitted: | 15 Jan 2007 20:59 | Modified: | 25 Jan 2007 8:37 |
| Reporter: | Jonas Oreland | ||
| Status: | Closed | ||
| Category: | Server: ClusterDD | Severity: | S3 (Non-critical) |
| Version: | 5.1 | OS: | |
| Assigned to: | Jonas Oreland | Target Version: | |
[15 Jan 2007 20:59]
Jonas Oreland
[15 Jan 2007 21:01]
Jonas Oreland
testscript for 2-node cluster
Attachment: bug.sh (application/x-shellscript, text), 462 bytes.
[15 Jan 2007 21:04]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/18149 ChangeSet@1.2366, 2007-01-15 21:03:39+01:00, jonas@perch.ndb.mysql.com +5 -0 ndb - bug#25636 Fix DD problem during NR after 3 missed LCP's
[16 Jan 2007 15:05]
Jonas Oreland
pushed into 5.1-ndb
[16 Jan 2007 18:59]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/18204 ChangeSet@1.2367, 2007-01-16 18:58:43+01:00, jonas@perch.ndb.mysql.com +1 -0 ndb - bug#25636 additional fix after autotest dont send start_fragreq to temporary tables such as ordered indexes...
[24 Jan 2007 3:09]
Tomas Ulin
pushed to 5.1.15
[25 Jan 2007 8:37]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at
http://dev.mysql.com/doc/en/installing-source.html
Documented bugfix in 5.1.15 changelog.
