ndb - bug#25636   Fix DD problem during NR after 3 missed LCP's